--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veto e-Weterynaria</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css\style.css" />
 </head>
 <body>
 <header>
@@ -15,7 +15,7 @@
 </header>
 <nav>
     <ul>
-        <li><a href="index.html" class="myButton">Strona główna</a></li>
+        <li><a href="/index" class="myButton">Strona główna</a></li>
         <li><a href="/vets" class="myButton">Weterynarze</a></li>
         <li><a href="/treatments" class="myButton">Zabiegi</a></li>
         <li><a href="/pets" class="myButton">Zwierzaki</a></li>
