--- a/src/main/resources/templates/pages/treatment-edit.html
+++ b/src/main/resources/templates/pages/treatment-edit.html
@@ -17,7 +17,7 @@
 </header>
 <nav>
     <ul>
-        <li><a href="../../index.html" class="myButton">Strona główna</a></li>
+        <li><a href="/index" class="myButton">Strona główna</a></li>
         <li><a href="/vets" class="myButton">Weterynarze</a></li>
         <li><a href="/treatments" class="myButton">Zabiegi</a></li>
         <li><a href="/pets" class="myButton">Zwierzaki</a></li>
