--- a/src/main/resources/templates/pages/vet-list.html
+++ b/src/main/resources/templates/pages/vet-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl-PL" xmlns:th="http://www.thymeleaf.org/">
+<html lang="pl-PL" xmlns:th="http://www.thymeleaf.org/" xmlns:sec="http://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,10 +40,10 @@
                     <li>
                         <a th:href="${'vet-details?id='+vet.getId()}" class="list-actions-button-details">Szczegóły</a>
                     </li>
-                    <li>
+                    <li sec:authorize="hasRole('ADMIN')">
                         <a th:href="${'vets/edit/'+vet.getId()}" class="list-actions-button-edit">Edytuj</a>
                     </li>
-                    <li>
+                    <li sec:authorize="hasRole('ADMIN')">
                         <a th:href="${'vets/delete/'+vet.getId()}" th:onclick="return confirm('Usunięte zostaną również połączone zabiegi, czy kontynuować?')" class="list-actions-button-delete">Usuń</a>
                     </li>
                 </ul>
